Added summaries to IgxGrid (#845)
* initial summary component added

* initially added summary component

* added summary min

* added hasSummarizedColumns method and summary template

* grid summaries

* removed summary functions from api

* added subcription on edit, add and delete to reset summary cache

* removed unnecessary code

* added summaries for DataType.Date

* fixed summaries

* merge

* added demo for grid-summary

* removed testing code

* fixed linting errors

* grid summary displayed in table

* added summaryContainer

* removed unnecessary code

* fixed linting errors

* added test for grid summaries

* Adding styles for grid summaries

* readme update

* Adding styles for string/number types

* grid style

* Fix summary theme DOCS

* readme update

* added style classes inside summary component

* removed unnecessary code

* added button for enabling summaries into gridSummary sample

* added methods for all crud operations in grid-summary sample

* added gridSummaryCache

* changed the emited object from onEditDone

* added interface ISummaryExpression

* added method enableSummaries()

* fixed problem width summaryCache

* added tests for summary component

* added tests for summaries

* readme updated with column pinning and summary changes

* summary sample extended with column pinning

* summary merged with column pinning

* fixed linting errors

* added description for enableSummaries method

* fixed summary labels

* removed code

* Change visual design

* added clearSummaryCache method

* fixed readme

* fixed Inputs table in grid readme

* fixed Input table in grid readme

* removed div wrapper

* implement design with ful height dotted borders

* Fix incorrect placeholder selector

* added pinned class to grid summaries

* fixed grid-summary tests

* fixed grid-summary tests

* paginator move out of tfoot

* 1. Add 1fr to grid bo

--- a/src/core/styles/themes/_index.scss
+++ b/src/core/styles/themes/_index.scss
@@ -19,6 +19,9 @@
 @import '../components/date-picker/date-picker-theme';
 @import '../components/dialog/dialog-theme';
 @import '../components/grid/grid-theme';
+@import '../components/grid-filtering/grid-filtering-theme';
+@import '../components/grid-summary/grid-summary-theme';
+@import '../components/grid-paginator/grid-paginator-theme';
 @import '../components/toast/toast-theme';
 @import '../components/tabbar/tabbar-theme';
 @import '../components/switch/switch-theme';
@@ -32,7 +35,6 @@
 @import '../components/list/list-theme';
 @import '../components/input/input-theme';
 @import '../components/icon/icon-theme';
-@import '../components/grid-filtering/grid-filtering-theme';
 @import '../components/time-picker/time-picker-theme';
 
 /// Generates an Ignite UI for Angular global theme.
@@ -54,11 +56,14 @@
 /// @requires {mixin} igx-dialog
 /// @requires {mixin} igx-grid
 /// @requires {mixin} igx-grid-filtering
+/// @requires {mixin} igx-grid-summary
+/// @requires {mixin} igx-grid-paginator
 /// @requires {mixin} igx-icon
 /// @requires {mixin} igx-input
 /// @requires {mixin} igx-list
 /// @requires {mixin} igx-navbar
 /// @requires {mixin} igx-navdrawer
+/// @requires {mixin} igx-paginator
 /// @requires {mixin} igx-progress-linear
 /// @requires {mixin} igx-progress-circular
 /// @requires {mixin} igx-radio
@@ -119,6 +124,9 @@
     @if not(index($exclude, 'igx-filtering')) {
         @include igx-grid-filtering($theme: (), $palette: $palette);
     }
+    @if not(index($exclude, 'igx-summary')) {
+        @include igx-grid-summary($theme: (), $palette: $palette);
+    }
     @if not(index($exclude, 'igx-icon')) {
         @include igx-icon($theme: (), $palette: $palette);
     }
@@ -133,6 +141,9 @@
     }
     @if not(index($exclude, 'igx-nav-drawer')) {
         @include igx-navdrawer($theme: (), $palette: $palette);
+    }
+    @if not(index($exclude, 'igx-grid-paginator')) {
+        @include igx-grid-paginator($theme: (), $palette: $palette);
     }
     @if not(index($exclude, 'progress-circular')) {
         @include igx-progress-circular($theme: (), $palette: $palette);
