--- a/demos/app/tabs/sample.component.html
+++ b/demos/app/tabs/sample.component.html
@@ -48,9 +48,9 @@
             <!-- </div>
         </article> -->
 
-        <article class="sample-column" style="width: 800px">
+        <article class="sample-column" >
             <h4 class="sample-title">Three item tabbar</h4>
-            <div class="tabbar-wrapper" #tabbarEl>
+            <div class="tabbar-wrapper" #tabbarEl style="width: 600px">
                 <igx-tabs>
                     <igx-tabs-group label="Tab1">
                         <div class="tab-content">
@@ -77,12 +77,12 @@
                                 Curabitur consequat sit amet nulla at consequat. Duis volutpat tristique luctus.</p>
                         </div>
                     </igx-tabs-group>
-                    <igx-tabs-group label="Tab3 Tab3 Tab3 Tab3">
+                    <!-- <igx-tabs-group label="Tab3 Tab3 Tab3 Tab3">
                         <ng-template igxTab>
                             <igx-avatar initials="T1">
                             </igx-avatar>
                             </ng-template>
-                    </igx-tabs-group>
+                    </igx-tabs-group> -->
                     <igx-tabs-group label="Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4">
                         <div class="tab-content">
                             <router-outlet name="tabPanelOutlet"></router-outlet>
@@ -130,9 +130,9 @@
             </div>
         </article>
 
-        <article class="sample-column">
+        <!-- <article class="sample-column">
             <h4 class="sample-title">Three item tabbar</h4>
-            <div class="tabbar-wrapper" #tabbarEl>
+            <div class="tabbar-wrapper" #tabbarEl> -->
                 <!-- <igx-tabs #tabbar (onTabSelected)="route($event)" >
 
                     <igx-tab-panel label="Movies" icon="local_movies">
@@ -169,9 +169,9 @@
                     </igx-tab-panel>
 
                 </igx-tabs> -->
-            </div>
+            <!-- </div>
         </article>
-    </div>
+    </div> -->
 
    
 </div>
