refactor(tabs): Refactoring tabs code #538

--- a/src/core/styles/components/tabs/_tabs-theme.scss
+++ b/src/core/styles/components/tabs/_tabs-theme.scss
@@ -87,7 +87,7 @@
         bottom: inherit;
         //width: 100%;
         border-width: 2px;
-        border-bottom: 2px #ECEBE9 solid;
+        border-bottom: 2px #ecebe9 solid;
         flex-grow: 1;
     }
 
@@ -114,7 +114,7 @@
 
     %igx-tabs-menu-item--selected {
         border-width: 2px;
-        border-bottom: 2px #06C0D3 solid;     
+        border-bottom: 2px #06c0d3 solid;     
     }
   
     %igx-tabs-menu-item--disabled {
