--- a/src/checkbox/checkbox.component.html
+++ b/src/checkbox/checkbox.component.html
@@ -1,15 +1,15 @@
-<input class="igx-checkbox__input" #checkbox type="checkbox" [attr.id]="id" [attr.name]="name" [attr.value]="value" [attr.tabindex]="tabindex"
+<input #checkbox class="igx-checkbox__input" type="checkbox" [attr.id]="id" [attr.name]="name" [attr.value]="value" [attr.tabindex]="tabindex"
     [attr.disabled]="disabled ? true : null" [indeterminate]="indeterminate" [checked]="checked" [attr.aria-checked]="checked"
     (change)="onChange($event)" (focus)="onFocus($event)" (blur)="onBlur($event)">
 
-<label class="igx-checkbox__composite" igxRipple [igxRippleDisabled]="disableRipple" [igxRippleCentered]="true" [igxRippleDuration]="100"
-    igxRippleTarget=".igx-checkbox__ripple" [attr.for]="id">
+<label #label class="igx-checkbox__composite" igxRipple [igxRippleDisabled]="disableRipple" [igxRippleCentered]="true" [igxRippleDuration]="100"
+    igxRippleTarget=".igx-checkbox__ripple" [attr.for]="id" (click)="$event.stopPropagation()">
     <svg class="igx-checkbox__composite-mark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
         <path d="M4.1,12.7 9,17.6 20.3,6.3" />
     </svg>
     <div class="igx-checkbox__ripple"></div>
 </label>
 
-<span [class]="labelClass" (click)="onChange($event)">
+<span #placeholderLabel [class]="labelClass" (click)="onChange($event)">
     <ng-content></ng-content>
 </span>
