Simplify template and add a couple of properties

--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -1,29 +1,27 @@
-<div #tabsContainer>
-    <div #headerContainer style="display: flex; overflow: hidden; position: relative; height: 48px;">
+<div #tabsGroup [style.width.px]='width'>
+    <div #headerContainer [style.width.px]='width' style="overflow: hidden; height: 48px; display: inline-block;">
        
-        <div style="display: flex; width: 40px; z-index:2">
-            <button igxButton="icon" [disabled]="!isScrollable" (click)="left($event)">
-                <igx-icon fontSet="material" name="chevron_left"></igx-icon>
+        <div style="width: 30px;float: left;">
+            <button style="height:48px" igxButton="icon" (click)="left($event)">
+                <igx-icon fontSet="material" name="<"></igx-icon>
             </button>
         </div>
 
-        <div #tablist role="tablist" aria-orientation="horizontal" style="display: flex; flex-grow: 1; overflow: hidden; z-index: 1;">
-            <div style="display: flex;">
-              <div #tabmenu style="display:flex; flex-direction: row; overflow: hidden;" >
+        <div #viewPort [style.width.px]='viewPortWidth' style="float: left;overflow: hidden;" > 
+            <div #itemsContainer style="display:flex; flex-direction: row; width:1600px;height: 48px;" >
                 <igx-tab-item *ngFor="let group of groups" [id]="'igx-tab-item-' + group.index" [attr.aria-label]="group.label" [attr.aria-disabled]="group.isDisabled"
                     [attr.aria-selected]="group.isSelected" [attr.aria-controls]="'igx-tab-item-group-'+ group.index" [ngClass]="{
-                 'igx-tabs__menu-item': !group.isSelected && !group.isDisabled,
-                 'igx-tabs__menu-item--selected': group.isSelected,
-                 'igx-tabs__menu-item--disabled': group.isDisabled }" 
-                 [relatedGroup]="group" (click)="group.select()" role="tab" >
+                'igx-tabs__menu-item': !group.isSelected && !group.isDisabled,
+                'igx-tabs__menu-item--selected': group.isSelected,
+                'igx-tabs__menu-item--disabled': group.isDisabled }" 
+                [relatedGroup]="group" (click)="group.select()" role="tab" >
                 </igx-tab-item>
-                </div>
             </div>
-        </div>
+            </div>
 
-        <div style="display: flex; width: 40px;z-index:2">
-            <button igxButton="icon" [disabled]="!isScrollable" (click)="right($event)">
-                <igx-icon fontSet="material" name="chevron_right"></igx-icon>
+        <div style="width: 30px;float: right;">
+            <button style="height:48px" igxButton="icon" (click)="right($event)">
+                <igx-icon fontSet="material" name=">"></igx-icon>
             </button>
         </div>
 
