--- a/src/time-picker/time-picker.component.html
+++ b/src/time-picker/time-picker.component.html
@@ -1,4 +1,6 @@
-<input igxInput (click)="onClick()" [value]="displayTime" [disabled]="isDisabled" tabindex="0" readonly/>
+<igx-input-group>
+    <input igxInput (click)="onClick()" [value]="displayTime" [disabled]="isDisabled" tabindex="0" readonly/>
+</igx-input-group>
 <ng-container *ngTemplateOutlet="scroll" ></ng-container>
 <ng-template #scroll>
     <igx-dialog class="igx-time-picker__dialog-popup" closeOnOutsideSelect="true"
@@ -14,19 +16,13 @@
                 </div>
                 <div class="igx-time-picker__body">
                     <div #hourList [igxItemList]="'hourList'">
-                    <span [igxHourItem]="hour" *ngFor="let hour of hourView">
-                        {{ hour }}
-                    </span>
+                        <span [igxHourItem]="hour" *ngFor="let hour of hourView">{{ hour }}</span>
                     </div>
                     <div #minuteList [igxItemList]="'minuteList'">
-                    <span [igxMinuteItem]="minute" *ngFor="let minute of minuteView">
-                        {{ minute }}
-                    </span>
+                        <span [igxMinuteItem]="minute" *ngFor="let minute of minuteView">{{ minute }}</span>
                     </div>
                     <div #ampmList [igxItemList]="'ampmList'">
-                    <span [igxAmPmItem]="ampm" *ngFor="let ampm of ampmView">
-                        {{ ampm }}
-                    </span>
+                        <span [igxAmPmItem]="ampm" *ngFor="let ampm of ampmView">{{ ampm }}</span>
                     </div>
                 </div>
             </div>
