--- a/src/core/styles/components/tabs/_tabs-theme.scss
+++ b/src/core/styles/components/tabs/_tabs-theme.scss
@@ -17,17 +17,19 @@
 ///   @include igx-tabs($my-tabs-theme);
 @function igx-tabs-theme(
     $background: null,
-    $idle-item-color: null,
-    $active-item-color: null
+    $text-color: null,
+    $active-item-color: null,
+    $indicator-bg: null
 ) {
-    @if not($idle-item-color) and $background {
+    @if not($text-color) and $background {
         $idle-item-color: rgba(text-contrast($background), .7);
     }
 
     @return (
         background: $background,
-        idle-item-color: $idle-item-color,
-        active-item-color: $active-item-color
+        idle-item-color: $text-color,
+        active-item-color: $active-item-color,
+        indicator-bg: $indicator-bg
     );
 }
 
@@ -41,9 +43,10 @@
 /// @requires rem
 @mixin igx-tabs($theme, $palette: $default-palette) {
     $default-theme: igx-tabs-theme(
-        $background: #fff,
-        $idle-item-color: igx-color($palette, 'grays', 600),
-        $active-item-color: igx-color($palette, 'primary')
+        $background: transparent,
+        $text-color: igx-color($palette, 'grays', 600),
+        $active-item-color: igx-color($palette, 'primary'),
+        $indicator-bg: igx-color($palette, 'secondary', 500)
     );
 
     $this: extend($default-theme, $theme);
@@ -52,71 +55,74 @@
 
     $menu-height: 56px;
     $top-menu-shadow: igx-elevation($elevations, 8);
-    $bottom-menu-shadow: 0 -2px 4px -1px igx-color($palette, 'grays', 400),
-        0 -4px 5px 0 igx-color($palette, 'grays', 300),
-        0 -1px 10px 0 igx-color($palette, 'grays', 200);
+    $bottom-menu-shadow: 0 -2px 4px -1px igx-color($palette, 'grays', 400), 0 -4px 5px 0 igx-color($palette, 'grays', 300), 0 -1px 10px 0 igx-color($palette, 'grays', 200);
 
-    $item-min-width: 80px;
-    $item-max-width: 168px;
-    $item-padding: 0 rem(12px, 16px);
+    $item-min-width: 160px;
+    $item-max-width: 264px;
+    $item-padding: 0 rem(24px);
+    $tabs-height: rem(48px);
 
     $label-font-size: rem(12px, 16px);
     $label-line-height: rem(12px, 16px);
 
-
-    %igx-tabs-group {
-        display: none;
-    }
-
-    %igx-tabs-group--selected {
-        display: block;
-    }
-
-    %igx-tabs-menu {
+    // HEADER
+    %igx-tabs__header {
         display: flex;
-        //position: fixed;
-        justify-content: flex-start;
         align-items: center;
-        left: 0;
-        right: 0;
-        height: $menu-height;
         background: map-get($this, 'background');
-        overflow: hidden;
-        z-index: 1;
-        top: 0;
-        bottom: inherit;
-        //width: 100%;
-        border-width: 2px;
-        border-bottom: 2px #ecebe9 solid;
-        flex-grow: 1;
     }
 
+    // ITEM WRAPPER
+    %igx-tabs__wrapper {
+        flex: 1 1 auto;
+        overflow: hidden;
+    }
+
+    // ITEM HOLDER (The element that scrolls)
+    %igx-tabs__items-holder {
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+
+    // ITEM
     %igx-tabs-menu-item {
         display: flex;
-        position: relative;
-        flex-flow: column nowrap;
-        flex: 1;
-        align-items: center;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
         min-width: $item-min-width;
         max-width: $item-max-width;
-        height: 100%;
-        color: map-get($this, 'idle-item-color');
-        cursor: pointer;
-        user-select: none;
-        overflow: hidden;
+        height: $tabs-height;
+        color: map-get($this, 'text-color');
         padding: $item-padding;
-        -webkit-tap-highlight-color: transparent;
-        text-align: center;
-        flex-basis: auto;
-        width: 100%;
+        overflow: hidden;
+        cursor: pointer;
+        position: relative;
     }
 
-    %igx-tabs-menu-item--selected {
-        border-width: 2px;
-        border-bottom: 2px #06c0d3 solid;     
+    %igx-tabs__indicator {
+        position: absolute;
+        bottom: 0;
+        transform: translateX(0);
+        height: 2px;
+        width: 100px;
+        background: map-get($this, 'indicator-bg');
     }
-  
+
+    // SCROLL INDICATOR
+    .igx-tabs__scroller__indicator {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: none;
+        border: none;
+        padding: 0;
+        height: 100%;
+        width: rem(48px);
+        cursor: pointer;
+    }
+
     %igx-tabs-menu-item--disabled {
         opacity: .5;
         cursor: default;
@@ -125,19 +131,16 @@
     %igx-active-tab {
         color: map-get($this, 'active-item-color');
         transition: color .15s $ease-in-out-quad, opacity .25s $ease-in-out-quad;
-    
     }
 
     %igx-tab-item-label {
         @include ellipsis();
-        padding-top: 4px;
         font-size: $label-font-size;
         line-height: $label-line-height;
         max-width: 100%;
         text-align: center;
         transform: translateZ(0);
         transition: transform .15s $ease-in-out-quad;
-        z-index: 1;
     }
 
     %igx-tab-item-icon {
@@ -148,7 +151,6 @@
         padding: 0 8px;
         transform: translateZ(0);
         transition: transform .15s $ease-in-out-quad;
-        z-index: 1;
 
         igx-badge {
             position: absolute;
@@ -167,4 +169,24 @@
         @extend %igx-active-tab;
         transform: translateY(-2px) scale(1.166667);
     }
+
+    %igx-tabs__content {
+        display: flex;
+        overflow: hidden;
+    }
+
+    %igx-tabs__group {
+        visibility: hidden;
+        min-width: 100%;
+        transform: translateX(-100%);
+        transition: transform .5s cubic-bezier(.35, 0, .25, 1);
+    }
+
+    %igx-tabs__group--selected {
+        visibility: visible;
+        min-width: 100%;
+        transform: translateX(0);
+        transition: transform .5s cubic-bezier(.35, 0, .25, 1);
+    }
 }
+
