Moving grid specific virt height container - height: calc(100% + 18px) style to the grid themes so that it does not affect the normal igxFor.

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -140,6 +140,10 @@
         overflow: hidden;
     }
 
+    %grid-tbody > %vhelper--vertical {
+        height: calc(100% + 18px) !important;
+    }
+
     %vhelper-display {
         &::-webkit-scrollbar {
             width: 18px;
