--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -2,12 +2,12 @@
 <!-- TODO Remove tab container from here -->
 <div #tabsContainer>
     <div class="igx-tabs__header" #headerContainer>
-        <button class="igx-tabs__scroller__indicator igx-tabs__scroller__indicator--left" igxButton="icon" (click)="left($event)">
+        <button igxRipple class="igx-tabs__scroller__indicator igx-tabs__scroller__indicator--left" igxButton="icon" (click)="left($event)">
             <igx-icon fontSet="material" name="navigate_before"></igx-icon>
         </button>
         <div class="igx-tabs__wrapper" #viewPort>
             <div #itemsContainer class="igx-tabs__items-holder">
-                <igx-tab-item igxRipple="#FBB13C" *ngFor="let group of groups" [id]="'igx-tab-item-' + group.index" [attr.aria-label]="group.label" [attr.aria-disabled]="group.isDisabled"
+                <igx-tab-item igxRipple *ngFor="let group of groups" [id]="'igx-tab-item-' + group.index" [attr.aria-label]="group.label" [attr.aria-disabled]="group.isDisabled"
                                              [attr.aria-selected]="group.isSelected" [attr.aria-controls]="'igx-tab-item-group-'+ group.index" [ngClass]="{
                 'igx-tabs__menu-item': !group.isSelected && !group.isDisabled,
                 'igx-tabs__menu-item--selected': group.isSelected,
@@ -17,7 +17,7 @@
                 <div class="igx-tabs__indicator"></div>
             </div>
         </div>
-        <button class="igx-tabs__scroller__indicator igx-tabs__scroller__indicator--right" igxButton="icon" (click)="right($event)">
+        <button igxRipple class="igx-tabs__scroller__indicator igx-tabs__scroller__indicator--right" igxButton="icon" (click)="right($event)">
             <igx-icon fontSet="material" name="navigate_next"></igx-icon>
         </button>
     </div>
