refactor(grid): updated styles for the new virtual scrolling

--- a/src/core/styles/components/grid-summary/_grid-summary-component.scss
+++ b/src/core/styles/components/grid-summary/_grid-summary-component.scss
@@ -33,6 +33,11 @@
         @extend %igx-grid-summary--pinned !optional;
     }
 
+    @include m(pinned-last) {
+        @extend %igx-grid-summary--pinned !optional;
+        @extend %igx-grid-summary--pinned-last !optional;
+    }
+
     @include m(empty) {
         @extend %igx-grid-summary !optional;
         @extend %igx-grid-summary--empty !optional;
