--- a/src/core/styles/components/grid/_grid-component.scss
+++ b/src/core/styles/components/grid/_grid-component.scss
@@ -20,7 +20,6 @@
 
         igx-display-container {
             @extend %grid-display-container-thead !optional;
-            width: 100%;
         }
     }
 
@@ -80,12 +79,12 @@
         @extend %grid-cell-number !optional;
     }
 
-    @include e(th, $m: pinned-start) {
-        @extend %grid-cell-pinned--start !optional;
+    @include e(th, $m: pinned) {
+        @extend %grid-cell--pinned !optional;
     }
 
-    @include e(th, $m: pinned-start-last) {
-        @extend %grid-cell-pinned--start-last !optional;
+    @include e(th, $m: pinned-last) {
+        @extend %grid-cell--pinned-last !optional;
     }
 
     @include e(th, $m: fw) {
@@ -104,12 +103,13 @@
         @extend %grid-cell-number !optional;
     }
 
-    @include e(td, $m: pinned-start) {
-        @extend %grid-cell-pinned--start !optional;
+    @include e(td, $m: pinned) {
+        @extend %grid-cell--pinned !optional;
     }
 
-    @include e(td, $m: pinned-start-last) {
-        @extend %grid-cell-pinned--start-last !optional;
+    @include e(td, $m: pinned-last) {
+        @extend %grid-cell--pinned !optional;
+        @extend %grid-cell--pinned-last !optional;
     }
 
     @include e(td, $m: pinned-end) {
