refactor(igxInput): Fixed broken igxInput tests.

--- a/demos/app/input/sample.component.html
+++ b/demos/app/input/sample.component.html
@@ -7,15 +7,15 @@
                 <h4 class="form-title">Personal Info</h4>
                 <igx-input-group>
                     <input igxInput name="firstName" type="text" [(ngModel)]="user.firstName" required disabled/>
-                    <label igxLabel for="firstName">First Name*</label>
+                    <label igxLabel for="firstName">First Name</label>
                 </igx-input-group>
                 <igx-input-group>
                     <input igxInput name="lastName" type="text" [(ngModel)]="user.lastName" />
-                    <label igxLabel for="lastName">Last Name*</label>
+                    <label igxLabel for="lastName">Last Name</label>
                 </igx-input-group>
                 <igx-input-group>
                     <input igxInput name="password" type="password" placeholder="{{placeholder}}" [(ngModel)]="user.password" required/>
-                    <label igxLabel for="password">Password*</label>
+                    <label igxLabel for="password">Password</label>
                 </igx-input-group>
                 <igx-input-group>
                     <textarea igxInput name="comment" placeholder="{{placeholder}}" [(ngModel)]="user.comment"></textarea>
