--- a/src/time-picker/time-picker.component.html
+++ b/src/time-picker/time-picker.component.html
@@ -14,8 +14,7 @@
                 <div class="igx-time-picker__header">
                     <h5 class="igx-time-picker__header-ampm">{{ selectedAmPm }}</h5>
                     <h2 class="igx-time-picker__header-hour">
-                        <span>{{ selectedHour }}</span>:
-                        <span>{{ selectedMinute }}</span>
+                        <span>{{ selectedHour }}</span>:<span>{{ selectedMinute }}</span>
                     </h2>
                 </div>
                 <div class="igx-time-picker__body">
