--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -12,8 +12,10 @@
                     </igx-card-header>
                     <igx-card-content>
                         <div class="igx-form-group">
-                            <input igxInput (keyup.enter)="addRow()" [(ngModel)]="newRecord">
-                            <label igxLabel>New value</label>
+                            <igx-input-group>
+                                    <input igxInput (keyup.enter)="addRow()" [(ngModel)]="newRecord">
+                                    <label igxLabel>New value</label>
+                            </igx-input-group>
                         </div>
                     </igx-card-content>
                     <igx-card-actions>
@@ -30,8 +32,10 @@
                     </igx-card-header>
                     <igx-card-content>
                         <div class="igx-form-group">
-                            <input igxInput [disabled]="selectedCell?.columnField === 'ID'" [ngModel]="selectedCell?.dataItem" (ngModelChange)="updateRecord($event)">
-                            <label igxLabel>Edit value</label>
+                            <igx-input-group>
+                                <input igxInput [disabled]="selectedCell?.columnField === 'ID'" [ngModel]="selectedCell?.dataItem" (ngModelChange)="updateRecord($event)">
+                                <label igxLabel>Edit value</label>
+                            </igx-input-group>
                         </div>
                     </igx-card-content>
                 </igx-card>
@@ -114,12 +118,16 @@
                     <igx-switch [checked]="grid2.paging" (change)="grid2.paging = $event.target.checked"></igx-switch>
                 </div>
                 <div class="igx-form-group">
+                    <igx-input-group>
                     <input min="1" type="number" igxInput [ngModel]="grid2.perPage" (ngModelChange)="onPerPage($event)">
                     <label igxLabel>Records shown</label>
+                    </igx-input-group>
                 </div>
                 <div class="igx-form-group">
+                    <igx-input-group>
                     <input min="0" type="number" igxInput [ngModel]="grid2.state?.paging?.index" (ngModelChange)="onPagination($event)">
                     <label igxLabel>Go to page</label>
+                    </igx-input-group>
                 </div>
             </div>
             <igx-grid #grid2 [data]="data | async" [paging]="true" [perPage]="10" (onCellSelection)="onInlineEdit($event)">
@@ -129,7 +137,9 @@
                     <!--
                     <ng-template igxCell let-col="column" let-ri="rowIndex" let-item="item">
                         <span *ngIf="!showInput(ri, col.field)">{{ item }}</span>
-                        <input *ngIf="showInput(ri, col.field)" igxInput [value]="item" (blur)="editCell = null" (change)="grid2.updateCell(ri, col.field, $event.target.value); editCell = null">
+                        <igx-input-group *ngIf="showInput(ri, col.field)">
+                            <input igxInput [value]="item" (blur)="editCell = null" (change)="grid2.updateCell(ri, col.field, $event.target.value); editCell = null">
+                        </igx-input-group>
                     </ng-template>
                 -->
                 </igx-column>
